--- a/core/src/main/resources/1.8.8/guis.yml
+++ b/core/src/main/resources/1.8.8/guis.yml
@@ -224,7 +224,7 @@ GUIS:
       TITLE: "&cSelect statistics to view"
       ICONS:
         FILLER-ITEM:
-          MATERIAL: BLACK_STAINED_GLASS_PANE
+          MATERIAL: STAINED_GLASS_PANE
         OWN-PLAYER-STATS:
           NAME: "&c%player% &7- &fStatistic"
           LORE:
