--- a/core/src/main/resources/language.yml
+++ b/core/src/main/resources/language.yml
@@ -1,9 +1,10 @@
-VERSION: 11
+VERSION: 12
 
 CONSOLE-NAME: "<red>Console"
 CANT-USE-CONSOLE: "<red>You can't use this command from the console."
 RELOAD-DISABLED: "<red>Reload is disabled. Please completely restart the server."
 STARTUP-NOT-READY: "<red>ZonePractice has not yet loaded all the necessary data."
+PLUGIN-LOADING-MESSAGE: "<red>The server is still loading, please wait..."
 CANT-READ-DATABASE-FILE: "<red>Could not read database setup file"
 CANT-USE-COMMAND: "<red>You can't use this command right now."
 WAIT-FOR-COOLDOWN: "<red>You have to wait <yellow>%seconds% %secondName% <red>before using this again."
@@ -16,7 +17,7 @@ SECOND-NAME:
   1SEC: "second"
   1<SEC: "seconds"
 GENERAL-CHAT:
-  SERVER-CHAT: "%division% <dark_gray>| <reset><gray>%%player%%: <white>%%message%%" # Group chat overwrites this.
+  SERVER-CHAT: "%%division%% <dark_gray>| <reset><gray>%%player%%: <white>%%message%%" # Group chat overwrites this.
   PARTY-CHAT: "<dark_gray>[<dark_aqua><bold>Party<dark_gray>] <reset><aqua>%%player%%<white>: <gray>%%message%%"
   STAFF-CHAT: "<dark_gray>[<yellow>StaffChat<dark_gray>] <reset><gray>%%player%%: <white>%%message%%"
 COMMAND:
