--- a/core/src/main/resources/language.yml
+++ b/core/src/main/resources/language.yml
@@ -401,19 +401,9 @@ COMMAND:
           - "<red> » /%label% host - Host an event."
           - "<red> » /%label% join - Join an event."
           - "<red> » /%label% <event> - An events settings."
-          - "<red> » /%label% <event> spawn - Event's spawn-points."
           - "<red> » /%label% stop <event> - Stop an ongoing event."
           - "<red><st>---------------------------------------"
       SPAWN-POSITION:
-        COMMAND-HELP:
-          - "<red><st>---------------------------------------"
-          - " <red>%event% Spawn Position"
-          - ""
-          - "<red> » /%label% %event% spawn add - Add a spawn position."
-          - "<red> » /%label% %event% spawn clear - Clear all spawn positions."
-          - "<red> » /%label% %event% spawn remove - Remove a spawn position."
-          - "<red> » /%label% %event% spawn list - List all spawn positions."
-          - "<red><st>---------------------------------------"
         NO-REGION: "<red>You must set the two corners of the arena first."
         SPAWN-ADDED: "<green>You added the spawn position for the %event% event. It has now %posCount% positions."
         SPAWN-REMOVED: "<green>You removed the spawn position for the %event% event. It has now %posCount% positions."
@@ -423,10 +413,13 @@ COMMAND:
           - "<red><st>---------------------------------------"
           - " <red>Brackets Event Setup"
           - ""
-          - "<red> » <click:suggest_command:'/%label% brackets setkit'><hover:show_text:'<gray>Set the kit and effects for the event.'>/%label% brackets setkit"
-          - "<red> » <click:suggest_command:'/%label% brackets enable'><hover:show_text:'<gray>Enable the brackets event.'>/%label% brackets enable"
-          - "<red> » <click:suggest_command:'/%label% brackets disable'><hover:show_text:'<gray>Disable the brackets event.'>/%label% brackets disable"
-          - "<red> » /%label% brackets spawn - Manage spawn positions."
+          - "<gray>Setup Commands:"
+          - "<red> » <click:suggest_command:'/%label% brackets setkit'><hover:show_text:'<gray>Set the kit for the event.'>/%label% brackets setkit"
+          - "<red> » <click:suggest_command:'/%label% brackets enable'><hover:show_text:'<gray>Enable the event.'>/%label% brackets enable"
+          - "<red> » <click:suggest_command:'/%label% brackets disable'><hover:show_text:'<gray>Disable the event.'>/%label% brackets disable"
+          - ""
+          - "<yellow>Note: <gray>Use <white>/setup event <gray>GUI to get the"
+          - "<gray>Event Wand for corner & spawn position setup."
           - "<red><st>---------------------------------------"
         EVENT-LIVE: "<red>You cannot edit the Brackets Event while it is ongoing."
         EVENT-ALREADY-ENABLED: "<red>Brackets event is already enabled."
@@ -450,12 +443,14 @@ COMMAND:
           - "<red><st>---------------------------------------"
           - " <red>Juggernaut Event Setup"
           - ""
-          - "<red> » <click:suggest_command:'/%label% %label2% setkit juggernaut'><hover:show_text:'<gray>Set the kit and effects for the juggernaut.'>/%label% %label2% setkit juggernaut"
-          - "<red> » <click:suggest_command:'/%label% %label2% setkit players'><hover:show_text:'<gray>Set the kit and effects for the players.'>/%label% %label2% setkit players"
-          - "<red> » /%label% %label2% spawn - Manage spawn positions."
+          - "<gray>Setup Commands:"
+          - "<red> » <click:suggest_command:'/%label% %label2% setkit juggernaut'><hover:show_text:'<gray>Set the kit for the juggernaut.'>/%label% %label2% setkit juggernaut"
+          - "<red> » <click:suggest_command:'/%label% %label2% setkit players'><hover:show_text:'<gray>Set the kit for the players.'>/%label% %label2% setkit players"
+          - "<red> » <click:suggest_command:'/%label% %label2% enable'><hover:show_text:'<gray>Enable the event.'>/%label% %label2% enable"
+          - "<red> » <click:suggest_command:'/%label% %label2% disable'><hover:show_text:'<gray>Disable the event.'>/%label% %label2% disable"
           - ""
-          - "<red> » <click:suggest_command:'/%label% %label2% enable'><hover:show_text:'<gray>Enable the juggernaut event.'>/%label% %label2% enable"
-          - "<red> » <click:suggest_command:'/%label% %label2% disable'><hover:show_text:'<gray>Disable the juggernaut event.'>/%label% %label2% disable"
+          - "<yellow>Note: <gray>Use <white>/setup event <gray>GUI to get the"
+          - "<gray>Event Wand for corner & spawn position setup."
           - "<red><st>---------------------------------------"
         EVENT-LIVE: "<red>You cannot edit the Juggernaut Event while it is ongoing."
         EVENT-ALREADY-ENABLED: "<red>Juggernaut event is already enabled."
@@ -479,10 +474,13 @@ COMMAND:
           - "<red><st>---------------------------------------"
           - " <red>LMS Event Setup"
           - ""
-          - "<red> » <click:suggest_command:'/%label% lms setkit'><hover:show_text:'<gray>Set the kit and effects for the event.'>/%label% lms setkit"
-          - "<red> » <click:suggest_command:'/%label% lms enable'><hover:show_text:'<gray>Enable the LMS event.'>/%label% lms enable"
-          - "<red> » <click:suggest_command:'/%label% lms disable'><hover:show_text:'<gray>Disable the LMS event.'>/%label% lms disable"
-          - "<red> » /%label% lms spawn - Manage spawn positions."
+          - "<gray>Setup Commands:"
+          - "<red> » <click:suggest_command:'/%label% lms setkit'><hover:show_text:'<gray>Set the kit for the event.'>/%label% lms setkit"
+          - "<red> » <click:suggest_command:'/%label% lms enable'><hover:show_text:'<gray>Enable the event.'>/%label% lms enable"
+          - "<red> » <click:suggest_command:'/%label% lms disable'><hover:show_text:'<gray>Disable the event.'>/%label% lms disable"
+          - ""
+          - "<yellow>Note: <gray>Use <white>/setup event <gray>GUI to get the"
+          - "<gray>Event Wand for corner & spawn position setup."
           - "<red><st>---------------------------------------"
         EVENT-LIVE: "<red>You cannot edit the LMS Event while it is ongoing."
         EVENT-ALREADY-ENABLED: "<red>LMS event is already enabled."
@@ -500,9 +498,12 @@ COMMAND:
           - "<red><st>---------------------------------------"
           - " <red>OITC Event Setup"
           - ""
-          - "<red> » <click:suggest_command:'/%label% oitc enable'><hover:show_text:'<gray>Enable the OITC event.'>/%label% oitc enable"
-          - "<red> » <click:suggest_command:'/%label% oitc disable'><hover:show_text:'<gray>Disable the OITC event.'>/%label% oitc disable"
-          - "<red> » /%label% oitc spawn - Manage spawn positions."
+          - "<gray>Setup Commands:"
+          - "<red> » <click:suggest_command:'/%label% oitc enable'><hover:show_text:'<gray>Enable the event.'>/%label% oitc enable"
+          - "<red> » <click:suggest_command:'/%label% oitc disable'><hover:show_text:'<gray>Disable the event.'>/%label% oitc disable"
+          - ""
+          - "<yellow>Note: <gray>Use <white>/setup event <gray>GUI to get the"
+          - "<gray>Event Wand for corner & spawn position setup."
           - "<red><st>---------------------------------------"
         EVENT-LIVE: "<red>You cannot edit the OITC Event while it is ongoing."
         EVENT-ALREADY-ENABLED: "<red>OITC event is already enabled."
@@ -520,9 +521,12 @@ COMMAND:
           - "<red><st>---------------------------------------"
           - " <red>Splegg Event Setup"
           - ""
-          - "<red> » <click:suggest_command:'/%label% splegg enable'><hover:show_text:'<gray>Enable the Splegg event.'>/%label% splegg enable"
-          - "<red> » <click:suggest_command:'/%label% splegg disable'><hover:show_text:'<gray>Disable the Splegg event.'>/%label% splegg disable"
-          - "<red> » /%label% splegg spawn - Manage spawn positions."
+          - "<gray>Setup Commands:"
+          - "<red> » <click:suggest_command:'/%label% splegg enable'><hover:show_text:'<gray>Enable the event.'>/%label% splegg enable"
+          - "<red> » <click:suggest_command:'/%label% splegg disable'><hover:show_text:'<gray>Disable the event.'>/%label% splegg disable"
+          - ""
+          - "<yellow>Note: <gray>Use <white>/setup event <gray>GUI to get the"
+          - "<gray>Event Wand for corner & spawn position setup."
           - "<red><st>---------------------------------------"
         EVENT-LIVE: "<red>You cannot edit the Splegg Event while it is ongoing."
         EVENT-ALREADY-ENABLED: "<red>Splegg event is already enabled."
@@ -538,9 +542,12 @@ COMMAND:
           - "<red><st>---------------------------------------"
           - " <red>Sumo Event Setup"
           - ""
-          - "<red> » <click:suggest_command:'/%label% sumo enable'><hover:show_text:'<gray>Enable the Sumo event.'>/%label% sumo enable"
-          - "<red> » <click:suggest_command:'/%label% sumo disable'><hover:show_text:'<gray>Disable the Sumo event.'>/%label% sumo disable"
-          - "<red> » /%label% sumo spawn - Manage spawn positions."
+          - "<gray>Setup Commands:"
+          - "<red> » <click:suggest_command:'/%label% sumo enable'><hover:show_text:'<gray>Enable the event.'>/%label% sumo enable"
+          - "<red> » <click:suggest_command:'/%label% sumo disable'><hover:show_text:'<gray>Disable the event.'>/%label% sumo disable"
+          - ""
+          - "<yellow>Note: <gray>Use <white>/setup event <gray>GUI to get the"
+          - "<gray>Event Wand for corner & spawn position setup."
           - "<red><st>---------------------------------------"
         EVENT-LIVE: "<red>You cannot edit the Sumo Event while it is ongoing."
         EVENT-ALREADY-ENABLED: "<red>Sumo event is already enabled."
@@ -562,9 +569,12 @@ COMMAND:
           - "<red><st>---------------------------------------"
           - " <red>TntTag Event Setup"
           - ""
-          - "<red> » <click:suggest_command:'/%label% tnttag enable'><hover:show_text:'<gray>Enable the TntTag event.'>/%label% tnttag enable"
-          - "<red> » <click:suggest_command:'/%label% tnttag disable'><hover:show_text:'<gray>Disable the TntTag event.'>/%label% tnttag disable"
-          - "<red> » /%label% tnttag spawn - Manage spawn positions."
+          - "<gray>Setup Commands:"
+          - "<red> » <click:suggest_command:'/%label% tnttag enable'><hover:show_text:'<gray>Enable the event.'>/%label% tnttag enable"
+          - "<red> » <click:suggest_command:'/%label% tnttag disable'><hover:show_text:'<gray>Disable the event.'>/%label% tnttag disable"
+          - ""
+          - "<yellow>Note: <gray>Use <white>/setup event <gray>GUI to get the"
+          - "<gray>Event Wand for corner & spawn position setup."
           - "<red><st>---------------------------------------"
         EVENT-LIVE: "<red>You cannot edit the TntTag Event while it is ongoing."
         EVENT-ALREADY-ENABLED: "<red>TntTag event is already enabled."
