--- a/core/src/main/resources/modern/guis.yml
+++ b/core/src/main/resources/modern/guis.yml
@@ -2309,20 +2309,29 @@ GUIS:
             NAME: "&e%eventName%"
             LORE:
               - ""
-              - "&7You can set the event icon by left"
-              - "&7clicking here with the desired item."
+              - "&7&lIcon Customization:"
+              - "&b» LEFT-CLICK &7with an item to set as icon"
               - ""
-              - "&7Right-click to teleport to the events arena."
+              - "&7&lQuick Teleport:"
+              - "&b» RIGHT-CLICK &7to teleport to event arena"
+              - ""
+              - "&7Change the visual icon shown in the"
+              - "&7Event Host GUI by clicking with any item."
           SETTINGS:
             NAME: "&4Settings"
             MATERIAL: REDSTONE
             LORE:
               - ""
-              - "&e&lClick here &7to adjust the events"
-              - "&7other settings, such as:"
-              - " &8» &cQueue time"
-              - " &8» &cDuration"
-              - "   &cetc..."
+              - "&e&lCLICK &7to configure event settings:"
+              - ""
+              - " &8» &cBroadcast Interval &7(chat announcements)"
+              - " &8» &cQueue Wait Time &7(before start)"
+              - " &8» &cMax Queue Time &7(before cancel)"
+              - " &8» &cGame Duration &7(match length)"
+              - " &8» &cStart Countdown &7(game start delay)"
+              - " &8» &cMin/Max Players &7(requirements)"
+              - ""
+              - "&7Fine-tune event behavior and timings."
           STATUS:
             ENABLED:
               NAME: "&7Status: &aEnabled"
@@ -2337,28 +2346,34 @@ GUIS:
               MATERIAL: RED_STAINED_GLASS_PANE
               LORE:
                 - ""
-                - "&e&lClick here &7to &aenable &7the event."
+                - "&e&lCLICK &7to &aenable &7the event."
                 - ""
-                - "&c&lNote: &7The event has to meet some"
-                - "&7requirements to be enable:"
-                - " &8» &eSet the event cube."
-                - " &8» &eSet the spawn-points."
-                - "   &eetc.."
+                - "&c&lRequirements to Enable:"
+                - " &8» &eEvent region (2 corners) must be set"
+                - " &8» &eAt least 2 spawn points must be set"
+                - " &8» &eAll settings must be configured"
+                - ""
+                - "&7&oUse the LOCATION button to set these up!"
           LOCATION:
             NAME: "&5Locations"
             MATERIAL: COMPASS
             LORE:
               - ""
-              - "&d&lLEFT-CLICK &7here to get a corner marker item."
+              - "&d&lLEFT-CLICK &7to start interactive setup mode."
               - ""
-              - "&7After &7you marked the corners, you can set the"
-              - "&7spawn positions with the"
-              - "&c&l/event %eventName% addspawn &7command."
+              - "&5&lSetup Process:"
+              - "&71. &dReceive Event Wand &7to configure locations"
+              - "&72. &dSet Corners: &7Left/Right click to mark region"
+              - "&73. &dAdd Spawns: &7Right click blocks to add spawn points"
+              - "&74. &dCycle Modes: &7Shift + Left/Right click"
+              - "&75. &dExit Setup: &7Drop (Q) the wand"
               - ""
-              - "&5&lCurrently Marked:"
+              - "&5&lCurrently Configured:"
               - " &5» &dCorner 1: &7%corner1%"
               - " &5» &dCorner 2: &7%corner2%"
-              - " &5» &dPlayer Positions: &7%spawnPositions% pcs"
+              - " &5» &dSpawn Points: &7%spawnPositions% set"
+              - ""
+              - "&7&oNo commands needed - use the wand!"
       EVENT-SETTINGS:
         TITLE: "&1%eventName% &8- Settings"
         ICONS:
