--- a/core/src/main/resources/1.8.8/guis.yml
+++ b/core/src/main/resources/1.8.8/guis.yml
@@ -1,4 +1,4 @@
-VERSION: 9
+VERSION: 11
 
 GENERAL-FILLER-ITEM:
   NAME: " "
@@ -2092,6 +2092,64 @@ GUIS:
                 - "&7during the match."
                 - ""
                 - "&e&lClick here &7to &aenable&7."
+          RESET-BUILD-AFTER-ROUND:
+            ENABLED:
+              NAME: "&7Reset Build After Round: &aEnabled"
+              MATERIAL: GRASS
+              LORE:
+                - ""
+                - "&7The arena will be reset after each"
+                - "&7round, before the next one starts."
+                - ""
+                - "&e&lClick here &7to &cdisable&7."
+            DISABLED:
+              NAME: "&7Reset Build After Round: &cDisabled"
+              MATERIAL: GRASS
+              LORE:
+                - ""
+                - "&7The arena will not be reset between"
+                - "&7rounds. Placed blocks persist."
+                - ""
+                - "&e&lClick here &7to &aenable&7."
+          BREAK-ALL-BLOCKS:
+            ENABLED:
+              NAME: "&7Break All Blocks: &aEnabled"
+              MATERIAL: DIAMOND_PICKAXE
+              LORE:
+                - ""
+                - "&7Players can break any block in the arena,"
+                - "&7not just blocks they placed themselves."
+                - ""
+                - "&e&lClick here &7to &cdisable&7."
+            DISABLED:
+              NAME: "&7Break All Blocks: &cDisabled"
+              MATERIAL: WOOD_PICKAXE
+              LORE:
+                - ""
+                - "&7Players can only break blocks they"
+                - "&7placed during the match."
+                - ""
+                - "&e&lClick here &7to &aenable&7."
+          SPLEEF-SNOWBALL-MODE:
+            ENABLED:
+              NAME: "&7Snowball Mode: &aEnabled"
+              MATERIAL: SNOW_BALL
+              LORE:
+                - ""
+                - "&7Breaking a snow block gives a snowball."
+                - "&7Throw snowballs to destroy snow blocks"
+                - "&7beneath other players."
+                - ""
+                - "&e&lClick here &7to &cdisable&7."
+            DISABLED:
+              NAME: "&7Snowball Mode: &cDisabled"
+              MATERIAL: SNOW_BALL
+              LORE:
+                - ""
+                - "&7Enable to let players collect and throw"
+                - "&7snowballs that destroy snow blocks."
+                - ""
+                - "&e&lClick here &7to &aenable&7."
           ENDERPEARL-COOLDOWN:
             NAME: "&7EnderPearl Cooldown: &6%epCooldown% sec"
             MATERIAL: ENDER_PEARL
@@ -2664,18 +2722,6 @@ GUIS:
               - "&7Enabled arenas: &e%enabledArena%"
               - "&7Enabled ladders: &e%enabledLadder%"
               - "&7Enabled events: &e%enabledEvents%"
-              - "&8&m------------------------"
-          RELOAD:
-            NAME: "&eReload files"
-            MATERIAL: CLAY_BALL
-            LORE:
-              - "&8&m------------------------"
-              - "&7Click here to reload the server files."
-              - ""
-              - "&c&lNOTE: &7If you configured a lot of things"
-              - "&7in the config files, it is recommended to"
-              - "&7restart the server, because there are global"
-              - "&7variables that may not be reloaded with this."
               - "&8&m------------------------"
           LOBBY-ARMORS:
             NAME: "&eLobby Armors"
