--- a/core/src/main/resources/modern/config.yml
+++ b/core/src/main/resources/modern/config.yml
@@ -1,4 +1,4 @@
-VERSION: 13
+VERSION: 14
 
 # Mysql database setup.
 MYSQL-DATABASE:
@@ -27,6 +27,7 @@ KNOCKBACK:
 QUEUE:
   UNRANKED:
     MAX-QUEUE-TIME: 300 # In sec.
+    GUI-UPDATE-MINUTE: 2
     DIVISION-SEARCH:
       ENABLED: true
       SETTINGS:
@@ -35,8 +36,8 @@ QUEUE:
     SELECTOR-GUI:
       SHOW-DISABLED-LADDERS: true
       FIRST-CATEGORY:
-        SIZE: 4
-        GO-TO-SECOND-CATEGORY-SLOT: 35
+        SIZE: 5
+        GO-TO-SECOND-CATEGORY-SLOT: 44
         LADDERS:
           BATTLERUSH: 10
           BEDWARS: 11
@@ -49,6 +50,8 @@ QUEUE:
           SUMO: 22
           BUILDUHC: 23
           PEARLFIGHT: 24
+          CRYSTAL: 30
+          SPEAR: 32
       SECOND-CATEGORY:
         ENABLED: true
         BACK-TO-FIRST-CATEGORY-SLOT: 35
@@ -64,6 +67,7 @@ QUEUE:
           VANILLA: 24
   RANKED:
     MAX-QUEUE-TIME: 300 # In sec.
+    GUI-UPDATE-MINUTE: 1
     DEFAULT-ELO: 1000
     ELO-RANGE-TIME: 5 # Sec
     ELO-RANGE-INCREASE: 20 # Range
@@ -72,8 +76,8 @@ QUEUE:
     SELECTOR-GUI:
       SHOW-DISABLED-LADDERS: true
       FIRST-CATEGORY:
-        SIZE: 4
-        GO-TO-SECOND-CATEGORY-SLOT: 35
+        SIZE: 5
+        GO-TO-SECOND-CATEGORY-SLOT: 44
         LADDERS:
           BATTLERUSH: 10
           BEDWARS: 11
@@ -86,6 +90,8 @@ QUEUE:
           SUMO: 22
           BUILDUHC: 23
           PEARLFIGHT: 24
+          CRYSTAL: 30
+          SPEAR: 32
       SECOND-CATEGORY:
         ENABLED: true
         BACK-TO-FIRST-CATEGORY-SLOT: 18
