--- a/core/src/main/resources/modern/playerkit.yml
+++ b/core/src/main/resources/modern/playerkit.yml
@@ -424,6 +424,44 @@ GUI:
             - "CROSSBOW"
             - "ARROW"
             - "SPECTRAL_ARROW"
+            - "TIPPED_ARROW::NIGHT_VISION"
+            - "TIPPED_ARROW::LONG_NIGHT_VISION"
+            - "TIPPED_ARROW::INVISIBILITY"
+            - "TIPPED_ARROW::LONG_INVISIBILITY"
+            - "TIPPED_ARROW::LEAPING"
+            - "TIPPED_ARROW::LONG_LEAPING"
+            - "TIPPED_ARROW::STRONG_LEAPING"
+            - "TIPPED_ARROW::FIRE_RESISTANCE"
+            - "TIPPED_ARROW::LONG_FIRE_RESISTANCE"
+            - "TIPPED_ARROW::SWIFTNESS"
+            - "TIPPED_ARROW::LONG_SWIFTNESS"
+            - "TIPPED_ARROW::STRONG_SWIFTNESS"
+            - "TIPPED_ARROW::SLOWNESS"
+            - "TIPPED_ARROW::LONG_SLOWNESS"
+            - "TIPPED_ARROW::STRONG_SLOWNESS"
+            - "TIPPED_ARROW::WATER_BREATHING"
+            - "TIPPED_ARROW::LONG_WATER_BREATHING"
+            - "TIPPED_ARROW::INSTANT_HEAL"
+            - "TIPPED_ARROW::STRONG_HEALING"
+            - "TIPPED_ARROW::INSTANT_DAMAGE"
+            - "TIPPED_ARROW::STRONG_HARMING"
+            - "TIPPED_ARROW::POISON"
+            - "TIPPED_ARROW::LONG_POISON"
+            - "TIPPED_ARROW::STRONG_POISON"
+            - "TIPPED_ARROW::REGENERATION"
+            - "TIPPED_ARROW::LONG_REGENERATION"
+            - "TIPPED_ARROW::STRONG_REGENERATION"
+            - "TIPPED_ARROW::STRENGTH"
+            - "TIPPED_ARROW::LONG_STRENGTH"
+            - "TIPPED_ARROW::STRONG_STRENGTH"
+            - "TIPPED_ARROW::WEAKNESS"
+            - "TIPPED_ARROW::LONG_WEAKNESS"
+            - "TIPPED_ARROW::LUCK"
+            - "TIPPED_ARROW::TURTLE_MASTER"
+            - "TIPPED_ARROW::LONG_TURTLE_MASTER"
+            - "TIPPED_ARROW::STRONG_TURTLE_MASTER"
+            - "TIPPED_ARROW::SLOW_FALLING"
+            - "TIPPED_ARROW::LONG_SLOW_FALLING"
         POTION:
           TITLE: "&8Potions"
           OFFICIAL-ICONS:
